--- a/src/main/webapp/resources/css/easy-responsive-tabs.css
+++ b/src/main/webapp/resources/css/easy-responsive-tabs.css
@@ -3,8 +3,8 @@
   width:100%; float:left;
   max-width:100%;
 }
-.cd-tabs-content{ border:1px solid #ccc; text-align:left; margin-top:-1px;}
-.cd-tabs-content li{ padding:4px 27px 5px 27px;height:auto;}
+.cd-tabs-content{ /*border:1px solid #ccc;*/ text-align:left; margin-top:-1px;}
+.cd-tabs-content li{ padding:10px 0 /*4px 27px 5px 27px*/;height:auto;}
 .cd-tabs-content .bgpink th{ text-align:center;}
 .table-body{background-color:gray !important;}
 .cd-tabs:after {
@@ -88,35 +88,22 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
     text-transform: uppercase;
-    color:#fff;
-  padding-top: 34px; /* border:1px solid #ccc; */ margin-right:5px;
-  background: #e2d900;
-    background: -webkit-linear-gradient(45deg, #e2d900, #e2d900) !important;
-    background: -moz- oldlinear-gradient(45deg, #e2d900, #e2d900) !important;
-    background: -o-linear-gradient(45deg, #e2d900, #e2d900) !important;
-    background: linear-gradient(45deg, #e2d900, #e2d900) !important;
+    color:#333; background:#fcf300;
+  padding-top: 34px; margin-right:5px; text-decoration:none;
+  
 }
 .no-touch .cd-tabs-navigation a:hover {
-  color: #29324e;
-  background-color: rgba(233, 230, 202, 0.3);
+  color: #FFF; background: #ed3f3c; text-decoration:none;
 }
 .cd-tabs-navigation a.selected {
-  background-color: #343690 !important;
+	background:#ed3f3c; color:#FFF; padding:10px;
+  
     text-transform: uppercase;
-    font-weight:bold;
-  color: #fff;border-top:1px solid #ccc;border-right:1px solid #ccc;border-left:1px solid #ccc;border-bottom:1px solid #fff;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,f6f6f6+38,ffffff+100 */
-/* background: #eeeeee; Old browsers
-background: -moz-linear-gradient(top, #eeeeee 0%, #f6f6f6 38%, #ffffff 100%); FF3.6-15
-background: -webkit-linear-gradient(top, #eeeeee 0%,#f6f6f6 38%,#ffffff 100%); Chrome10-25,Safari5.1-6
-background: linear-gradient(to bottom, #eeeeee 0%,#f6f6f6 38%,#ffffff 100%); W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    background: #ff5252;
-    background: -webkit-linear-gradient(45deg, #ff5252, #f48fb1) !important;
-    background: -moz- oldlinear-gradient(45deg, #ff5252, #f48fb1) !important;
-    background: -o-linear-gradient(45deg, #ff5252, #f48fb1) !important;
-    background: linear-gradient(45deg, #ff5252, #f48fb1) !important;
+    font-weight:bold; text-decoration:none;
+  color: #fff;
+ 
 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+
 }
 .cd-tabs-navigation a::before {
   /* icons */
@@ -212,7 +199,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
 /*}*/
 
 .cd-tabs-content {
-  background: #ffffff;
+  /*background: #ffffff;*/
 }
 .cd-tabs-content li {
   display: none;
