--- a/src/main/webapp/resources/css/monginis.css
+++ b/src/main/webapp/resources/css/monginis.css
@@ -5,15 +5,36 @@
 @import url("jquery-ui.css");
 @import url("font-awesome.min.css");
 
-
-body{margin:0px;padding:0px;font-family:'Source Sans Pro', sans-serif !important; color:#696969;font-size:13px; background:#ecf0f5;}
-html {-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
-img{border:0px; max-width:100%;}
-p{ margin:0px; padding:0px;}
-ul, li{margin:0px; padding:0px;list-style-type: none;}
-h1, h2, h3, h4, h5, h6, h7 { margin:0px; padding:0px; font-weight:normal;}
-a{ text-decoration:none; color:#113665;}
-a:hover{ text-decoration:none; color:#343690;}
+body{margin:0px;padding:0px;color:#000;font-size:16px; background:#ecf0f5; font-weight: 400; font-family: 'Source Sans Pro', sans-serif !important; overflow-x:hidden;overflow-y:auto}
+article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
+audio,canvas,progress,video{display:inline-block;vertical-align:baseline}
+audio:not([controls]){display:none;height:0}[hidden],template{display:none}
+svg:not(:root){overflow:hidden}
+button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}
+button{overflow:visible}
+button,select{text-transform:none}
+button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}
+button[disabled],html input[disabled]{cursor:default}
+button{outline:none}
+button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
+input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}
+input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}
+input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}
+input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}
+input,textarea,button,select,a,div{-webkit-tap-highlight-color:transparent;outline:none}
+table{border-collapse:collapse;border-spacing:0}/*td,th{padding:0}*/
+img{border:0px;max-width:100%;vertical-align:top}
+::-moz-selection{background:#ed1c24;color:#fff}
+::selection{background:#ed1c24;color:#fff}
+*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
+:before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
+a{text-decoration:none; color:#bc5627;}
+*{text-rendering:optimizeLegibility}
+html.touch *{text-rendering:optimizeSpeed}
+p{margin: 0px;padding: 0px;}
+h1,h2,h3,h4,h5,h6{margin: 0px;padding: 0px;font-weight: normal;}
+ol,ul,li{margin: 0px;padding: 0px;list-style-type: none;}
+.clr{clear: both;}
 
 .wrapper{ width:100%; float:left; min-height:100%;}
 .wrapperIn{ width:100%; display:inline-block; vertical-align:top;}
@@ -528,6 +549,7 @@ th{font-weight: 600 !important;}
 #donutchart{width: 100%; height:500px; display: block;}
 
 #table_grid0 td i{display: none;}
+.four_one.extra_margin{margin-top: 30px;}
 
 
 .customer_one_frm{float:left; width: 35%;}
@@ -570,7 +592,10 @@ top: 50%; left: 50%; transform: translate(-50%, -50%);}
 .cd-tabs-content .bgpink th{border: 1px solid #CCC !important; padding:10px !important;}
 #table_grid0 td,table td[class*=col-], table th[class*=col-]{border: 1px solid #CCC; padding:10px !important;}
 
-
+.buttonsaveorder.redbtn{background: #e1001b; border: 2px solid #e1001b; color: #FFF;}
+.buttonsaveorder.redbtn:hover{background: #fcf300; border: 2px solid #fcf300; color: #333;}
+.buttonsaveorder.singlebtn{font-size: 14px; font-weight:600; text-transform: uppercase; text-decoration: none;}
+.second_titlerow{margin: 50px 0 0 0;}
 
 
 /*--css-divices--*/
@@ -600,6 +625,7 @@ top: 50%; left: 50%; transform: translate(-50%, -50%);}
   .advance_one{width: 28%;}
   .advance_fled{width: 65%;}
   .advance_txt{width: 32%;}
+  .four_one.extra_margin {width: 26%;}
   
   
   
@@ -630,6 +656,9 @@ top: 50%; left: 50%; transform: translate(-50%, -50%);}
   .advance_one{width: 32%; vertical-align: top;}
   
   .listarea li{width: 50% !important;}
+  .four_one.extra_margin {width: 36%;}
+  .four_one.extra_margin {margin-top: 27px;}
+  
 }
 
 @media screen and (max-width:700px){
@@ -661,6 +690,8 @@ top: 50%; left: 50%; transform: translate(-50%, -50%);}
   .order-btn.total{margin: 30px 0 0 0;}
   .cd-tabs-navigation li {float: left; margin: 5px 0;}
   .listarea li{width: 100% !important;}
+  
+  
 }
 
 @media screen and (max-width:480px){
