--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -80,8 +80,17 @@ header{width: 100%; background: #FFF; padding: 0;}
 			 -moz-transform: translateX(0) translateY(0);
 				-ms-transform: translateX(0) translateY(0);
 						transform: translateX(0) translateY(0);}
-.pending_pop{background: #FFF; width: 75%; margin: 30px auto 0 auto; padding: 25px; height: 500px; overflow-y: scroll;}
-.slide_close{position: absolute; right: 2px; top: 0; background: none; border: 0; color: #F00; font-size: 20px;}
+.pending_pop{background: #FFF; width: 75%; margin: 30px auto 0 auto; padding: 25px; height: 500px; /*overflow-y: scroll;*/ position: relative;}
+.slide_close{position: absolute; right: 10px; top: 10px; background: none; border: 0; color: #F00; font-size: 20px;}
+.pending_tab1 th,.pending_tab1 td{padding: 8px;}
+table{margin-bottom: 0 !important;}
+.datepicker_fld{width: 100%;}
+
+.pop_date{display: inline-block; width: 100%; margin: 25px 0 15px 0;}
+.pop_date_one{display: inline-block; width: 30%; margin: 0 20px 0 0;}
+.pop_date_txt{float: left; width: 30%; margin: 0 10px 0 0; padding: 5px 0 0 0; font-size: 16px; font-weight: 400; color: #333; text-align: right;}
+.pop_date_fld{float: right; width: 65%}
+.pop_date_btn{display: inline-block; vertical-align: top;}
 
 table.pending_tab {border-collapse: collapse; border-spacing: 0; width: 100%; border: 1px solid #ddd; height: 300px; overflow: scroll;}
 table.pending_tab th{text-transform: uppercase; font-size: 14px; color: #333; text-align: left; padding: 8px; border: 1px solid #ddd;}
@@ -391,7 +400,7 @@ input:checked + .slider:before {-webkit-transform: translateX(26px); -ms-transfo
  .franchise_nm span{display: block; text-align: center; font-size: 14px; color: #333;}
  
  
- .page_prc{display: inline-block; margin: 0 15px; font-size:18px; color:#333; font-weight:600;}
+ .page_prc{display: inline-block; margin: 0 15px; font-size:18px; color:#333; font-weight:600; font-family: 'Source Sans Pro', sans-serif !important;}
  .total_amt_right{display: inline-block; margin: 0; padding: 0px; color: #ed3f3c; font-size:20px; font-weight: 800;}
 .main_search{position: relative; text-align:right; float: right;}
 .main_search i{position: absolute; font-size: 16px; color: #333; top: 22px; right: 15px;}
@@ -434,9 +443,13 @@ background-position: 10px 10px; background-repeat: no-repeat; font-size: 16px; f
 .frm_row_one{display: inline-block; width: 100%;}
 .four_one{width: 23%; padding: 10px; float: left; text-align: left;}
 .four_two{width: 8%; padding: 10px; float: left; text-align: left; margin: 28px 0 0 0;}
+.four_one.three{width: 25%;}
 .multi_title {color: #333; padding-top: 0; padding-bottom: 8px; font-size: 16px; font-weight: 600;}
 .two_buttons{text-align: right;}
+.switch.top_1{margin: 0px; vertical-align: middle;}
 
+.sticky_table{margin: 0 0 15px 0;}
+.scroll_one{height: 400px; width: 100%;}
 
 
 @media screen and (max-width:1440px){
@@ -462,6 +475,8 @@ background-position: 10px 10px; background-repeat: no-repeat; font-size: 16px; f
 	.customer_one{margin: 5px 0 0 0;}
 	
 	.pageTitle{float: none; width: 100%; text-align: left;}
+	.pop_date_one{width: 40%; vertical-align: top;}
+	.pop_date_txt{font-size: 14px;}
 }
 
 @media screen and (max-width:900px){
@@ -478,6 +493,11 @@ background-position: 10px 10px; background-repeat: no-repeat; font-size: 16px; f
 	.four_two{width: 12%; margin: 23px 0 0 0;}
 	.four_one{width: 22%; padding: 5px;}
 	
+	.pop_date_one{width: 38%;}
+	.pop_date_txt{display: block; float: none; width: 100%; margin: 0 0 10px 0; text-align: left;}
+	.pop_date_fld{width: 100%; float: none;}
+	.pop_date_btn{margin: 25px 0 0 0;}
+	
 	
 	
 	
@@ -489,6 +509,12 @@ background-position: 10px 10px; background-repeat: no-repeat; font-size: 16px; f
 	.total_amt_right{display: inline-block; margin: 10px 0;}
 	
 	.four_one{width: 33%;}
+	.four_one.three,.four_one.extra_margin{width: 50%; padding: 10px;}
+	.pending_pop{width: 95%;}
+	.pop_date{margin: 0 0 20px 0;}
+	.pop_date_one {width: 100%; margin: 0 0 15px 0;}
+	.pop_date_btn{margin: 0;}
+	.page_title{font-size: 21px;}
 }
 @media screen and (max-width:640px){
 	.drop_menu {width:60%;}
@@ -510,6 +536,9 @@ background-position: 10px 10px; background-repeat: no-repeat; font-size: 16px; f
 	.page_prc, .total_amt_right{margin: 10px 0; width: 100%; text-align: left; font-size: 16px;}
 	.four_one{width: 100%;}
 	.four_two{width: 100%; margin: 0;}
+	.four_one.three{width: 100%; padding: 10px 0;}
+	.four_one.extra_margin{margin: 0; padding: 0; width: 100%;}
+	.page_title{font-size: 18px;}
 
 }
 
