--- a/src/main/webapp/resources/newpos/css/monginis.css
+++ b/src/main/webapp/resources/newpos/css/monginis.css
@@ -36,12 +36,35 @@ p{margin: 0px;padding: 0px;}
 h1,h2,h3,h4,h5,h6{margin: 0px;padding: 0px;font-weight: normal;}
 ol,ul,li{margin: 0px;padding: 0px;list-style-type: none;}
 .clr{clear: both;}
-
+.buttonsaveorderpos {
+    background: #fcf300;
+    text-align: center;
+    margin: 0px;
+    padding: 3px 15px;
+    cursor: pointer;
+    border: 2px solid #fcf300;
+    color: #333;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    display: inline-block;
+    vertical-align: top;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+    -o-transition: all ease 0.5s;
+    -ms-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+}
 .wrapper{width: 100%;}
 header{width: 100%; background: #FFF; padding: 0;}
 
 .logo{float: left; padding: 10px 20px;}
-.drop_menu{float: right; margin:14px 15px 0 21px /*14px 14px 0 0*/; text-align: right;}
+.drop_menu{float: right; margin:14px 15px 0 21px /*14px 14px 0 0*/; text-align: left;}
 /*Styling Selectbox*/
 .dropdown {width: 200px; background:url(../images/ddarow.png) no-repeat right top; background-position:93% 16px; display: inline-block; background-color: #ecf0f5; transition: all .5s ease; position: relative; font-size: 14px; color: #000; height: 100%; text-align: left}
 .dropdown.popup_drop{width: 100%; padding: 6px 12px; border: 1px solid #d2d6de; background:url(../images/ddarow.png) no-repeat right top; background-position:97% 12px; display: inline-block; background-color: #FFF; transition: all .5s ease; position: relative; font-size: 12px; color: #333; height: 100%; text-align: left}
@@ -363,7 +386,7 @@ input:checked + .slider:before {-webkit-transform: translateX(26px); -ms-transfo
 /*--------- calculator pop up css start here -----------*/
 .add_customer.calcy{width: 48%;}
 .calcy_bx{padding: 15px; border-bottom: 1px solid #f4f4f4;}
-.calcy_1{float: left; width: 48%;}
+.calcy_1{float: left; width: 48%;padding-top:6px;}
 .calculator_bx{background: #ed1c24; padding: 15px;}
 .cal_quan{margin: 0 0 10px 0;}
 .qty_l{float: left; width: 15%; font-size: 14px; font-weight: 600; color: #FFF; margin: 6px 0 0 0;}
